--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -77,6 +77,8 @@ global:
         nettyShuffleInputBytes,
         cloudShuffleOutputBytes,
         cloudShuffleInputBytes,
+        cloudShuffleWriteLatencyAvg,
+        cloudShuffleReadLatencyAvg,
         allocateFromAvailableFailedNumber,
         numberOfDiscardExpiredCheckpointFolder,
         numJobRequiredWorkers,
