--- a/flink-connectors/flink-connector-hsap/pom.xml
+++ b/flink-connectors/flink-connector-hsap/pom.xml
@@ -30,7 +30,7 @@ under the License.
 	<artifactId>flink-connector-hsap_${scala.binary.version}</artifactId>
 
 	<properties>
-		<hsap.version>1.1.8</hsap.version>
+		<hsap.version>1.1.9</hsap.version>
 		<shading.prefix>org.apache.flink.hsap.shaded</shading.prefix>
 	</properties>
 
@@ -51,6 +51,14 @@ under the License.
 				<exclusion>
 					<groupId>log4j</groupId>
 					<artifactId>log4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.ow2.asm</groupId>
+					<artifactId>asm</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
