[#4649088] Use previous task managers when AM Failover in Kubernetes.

--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -217,6 +217,7 @@ common:
 
   # am failover recovery
   yarn.previous-container.as-pending-container: true
+  resourcemanager.previous-container.as-pending-container: true
   taskmanager.release-slot-when-job-master-disconnected.enabled: true
 
   # Table & SQL configurations.
