[#4837559] Support use snakeyaml dump configuration to flink-conf to keep the json format.

--- a/flink-dist-tob/src/main/resources/flink-conf.yaml
+++ b/flink-dist-tob/src/main/resources/flink-conf.yaml
@@ -34,6 +34,9 @@ common:
   #  state.backend.rocksdb.localdir: /opt/tmp/flink-dev/flink-rocksdb-local
   taskmanager.memory.network.fraction: 0.3
 
+  # configuration
+  configuration.flink-conf.dump-configuration-by-yaml: true
+
   # kubernetes configuration
   kubernetes.flink.log.dir: /opt/tiger/flink_deploy/log
   kubernetes.flink.conf.dir: /opt/tiger/flink_deploy/conf
