[#4494982] Support async logger in flink

--- a/flink-dist-tob/pom.xml
+++ b/flink-dist-tob/pom.xml
@@ -183,6 +183,13 @@ under the License.
 			<scope>compile</scope>
 		</dependency>
 
+		<!-- log4j2 use this -->
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
+			<version>3.4.2</version>
+		</dependency>
+
 		<dependency>
 			<artifactId>protobuf-java</artifactId>
 			<groupId>com.google.protobuf</groupId>
