--- a/flink-dist/pom.xml
+++ b/flink-dist/pom.xml
@@ -196,6 +196,13 @@ under the License.
 			<scope>compile</scope>
 		</dependency>
 
+		<!-- log4j2 use this -->
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId>
+			<version>3.4.2</version>
+		</dependency>
+
 		<!--
 			The following dependencies are packaged in 'examples/'
 			The scope of these dependencies needs to be 'provided' so that
