[#4837559] Support use snakeyaml dump configuration to flink-conf to keep the json format.

--- a/flink-dist-tob/src/main/resources/flink-conf.yaml
+++ b/flink-dist-tob/src/main/resources/flink-conf.yaml
@@ -73,6 +73,9 @@ common:
   ## StreamPipelineOptions
   pipeline.time-characteristic: EventTime
 
+  # configuration
+  configuration.flink-conf.dump-configuration-by-yaml: true
+
   # kubernetes configuration
   kubernetes.flink.log.dir: /opt/tiger/flink_deploy/log
   kubernetes.flink.conf.dir: /opt/tiger/flink_deploy/conf
