--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -325,9 +325,10 @@ leser:
 lupin:
   dc: cn
   clusterName: lupin
-  high-availability.zookeeper.quorum: 10.8.32.25:2184,10.8.32.68:2184,10.8.32.74:2184,10.8.32.72:2184,10.8.39.142:2184
+  high-availability.zookeeper.quorum: fdbd:dc01:ff:101:d750:67ff:ac3f:fde2:2181,fdbd:dc01:ff:101:245a:b8a7:4f88:f0e4:2181,fdbd:dc01:ff:101:6ee2:9963:ea58:7f1b:2181,fdbd:dc01:ff:101:8679:f9e2:f954:d450:2181,fdbd:dc01:ff:101:75cd:2833:3c6f:3114:2181
   hdfs.prefix: hdfs://haruna/flink_lf
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  ipv6.enabled: true
   ipv6.supported.cluster: lupin
 
 lobst:
@@ -585,16 +586,17 @@ hound:
 quinc:
   dc: cn
   clusterName: quinc
-  high-availability.zookeeper.quorum: 10.129.16.103:2181,10.129.19.99:2181,10.129.36.17:2181,10.129.42.156:2181,10.129.42.93:2181
+  high-availability.zookeeper.quorum: fdbd:dc03:ff:f2:0:248:247:88:2181,fdbd:dc03:ff:f2:0:248:238:96:2181,fdbd:dc03:ff:f2:0:248:233:110:2181,fdbd:dc03:ff:f2:0:248:251:90:2181,fdbd:dc03:ff:f2:0:248:231:88:2181
   hdfs.prefix: hdfs://haruna/flink_lq
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
+  ipv6.enabled: true
   ipv6.supported.cluster: quinc
 
 quiet:
   dc: cn
   clusterName: quiet
-  high-availability.zookeeper.quorum: fdbd:dc03:2:2::103:2181,fdbd:dc03:2:14::99:2181,fdbd:dc03:2:81::17:2181,fdbd:dc03:2:107::156:2181,fdbd:dc03:2:106::93:2181
+  high-availability.zookeeper.quorum: fdbd:dc03:ff:2:1:227:38:118:2181,fdbd:dc03:ff:2:1:227:173:112:2181,fdbd:dc03:ff:2:1:227:173:101:2181,fdbd:dc03:ff:2:1:227:186:137:2181,fdbd:dc03:ff:2:1:227:181:113:2181
   hdfs.prefix: hdfs://haruna/flink_lq
   checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint
   flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
@@ -1183,6 +1185,19 @@ koala-hl:
   execution.cancellation.timeout.enable: true
   ipv6.enabled: true
   ipv6.supported.cluster: koala-hl
+  bytedance.streaming.yarn.res-lake.enabled: false
+  yarn.res-lake.enabled: true
+
+koala-lf:
+  dc: cn
+  clusterName: koala-lf
+  high-availability.zookeeper.quorum: fdbd:dc01:ff:101:b149:6a76:e7ca:8457:2181,fdbd:dc01:ff:101:7431:239f:55f1:adae:2181,fdbd:dc01:ff:101:1aa8:4797:ae42:138f:2181,fdbd:dc01:ff:101:4e13:3e17:a524:cdb4:2181,fdbd:dc01:ff:101:acde:a044:99cc:d7f4:2181
+  hdfs.prefix: hdfs://haruna/flink_lf
+  checkpoint.hdfs.prefix: hdfs://haruna/home/byte_flink_checkpoint_20210220
+  flink.jobmanager.yarn.config.yarn.client.nodemanager-connect.max-wait-ms: 10000
+  execution.cancellation.timeout.enable: true
+  ipv6.enabled: true
+  ipv6.supported.cluster: koala-lf
   bytedance.streaming.yarn.res-lake.enabled: false
   yarn.res-lake.enabled: true
 
