--- a/flink-dist/pom.xml
+++ b/flink-dist/pom.xml
@@ -144,6 +144,13 @@ under the License.
 			</exclusions>
 		</dependency>
 
+		<!-- pb -->
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>${protoc.version}</version>
+		</dependency>
+
 		<!-- Cloud Shuffle Service support -->
 		<dependency>
 			<groupId>org.apache.flink</groupId>
@@ -825,10 +832,6 @@ under the License.
 								<relocation>
 									<pattern>com.codahale.metrics</pattern>
 									<shadedPattern>${shading.prefix}.com.codahale.metrics</shadedPattern>
-								</relocation>
-								<relocation>
-									<pattern>com.google.protobuf</pattern>
-									<shadedPattern>${shading.prefix}.com.google.protobuf</shadedPattern>
 								</relocation>
 								<relocation>
 									<pattern>com.fasterxml.jackson</pattern>
