[#4953601] Add TCP_USER_TIMEOUT for Netty server.

--- a/flink-dist-tob/src/main/resources/flink-conf.yaml
+++ b/flink-dist-tob/src/main/resources/flink-conf.yaml
@@ -107,7 +107,7 @@ common:
   # The Netty send and receive buffer size.
   taskmanager.network.netty.sendReceiveBufferSize: 4194304
   taskmanager.serializer.prune.buffer.threshold: 262144
-  taskmanager.network.netty.client.tcp-user-timeout-seconds: 600
+  taskmanager.network.netty.connection.tcp-user-timeout-seconds: 600
 
   # RPC / Akka
   akka.ask.timeout: 180 s # default 10 s
