--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -367,6 +367,8 @@ lepad:
   metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics
   bytedance.streaming.yarn.check.application.name.unique.region: true
   ipv6.supported.cluster: lepad
+  flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc01:fe:100e::1]:65212"
+  configuration.flink-conf.dump-configuration-by-yaml: true
 
 larva:
   dc: cn
@@ -557,6 +559,8 @@ horse:
   metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics
   bytedance.streaming.yarn.check.application.name.unique.region: true
   ipv6.supported.cluster: horse
+  flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc02:fe:1016::1]:65212"
+  configuration.flink-conf.dump-configuration-by-yaml: true
 
 hibis:
   dc: cn
@@ -828,6 +832,8 @@ quoka:
   bytedance.streaming.yarn.check.application.name.unique.region: true
   blacklist.taskmanager.critical.error.enabled: true
   ipv6.supported.cluster: quoka
+  flink.checkpoint.hdfs.dfs.vip.ipPort: "[fdbd:dc03:fe:1019::1]:65212"
+  configuration.flink-conf.dump-configuration-by-yaml: true
 
 quaga:
   dc: cn
