--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -232,6 +232,7 @@ non-global:
         startingRedundantContainerNum,
         containerStartDurationMaxMs,
         speculativeSlowContainerTimeoutMs,
+        releaseTimeoutContainerNum,
         pendingPhasePods,
       # gang
         gangFailedNum,
