--- a/flink-dist/src/main/flink-bin/conf/log4j.properties
+++ b/flink-dist/src/main/flink-bin/conf/log4j.properties
@@ -60,7 +60,7 @@ appender.databus.permitsPerSecond = ${sys:log.databus.permitsPerSecond}
 appender.databus.metricsUpdateInterval = 10000
 appender.databus.databusLevel = ${sys:log.databus.level}
 appender.databus.layout.type = PatternLayout
-appender.databus.layout.pattern = db4jv3 %X{ip} %X{hadoop_user} %X{pid} %X{cid} %d{yyyy-MM-dd_HH:mm:ss} %X{yarn_job} %X{yarn_queue} %p %c{1}: %m
+appender.databus.layout.pattern = flink_log %X{flink_env_type} %X{flink_job_name} %X{flink_application_id} %X{flink_job_owner} %X{flink_queue} %d{yyyy-MM-dd_HH:mm:ss} %p %c{1}: %m
 
 appender.streamlog.name = LogAgentAppender
 appender.streamlog.type = org.apache.flink.metrics.databus.LogAgentAppender
