--- a/flink-streaming-java/pom.xml
+++ b/flink-streaming-java/pom.xml
@@ -76,7 +76,7 @@ under the License.
 
 		<dependency>
 			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-shaded-bytedance</artifactId>
+			<artifactId>flink-shaded-bytedance-commons</artifactId>
 			<version>${flink.shaded.version}</version>
 		</dependency>
 
