--- a/flink-connectors/pom.xml
+++ b/flink-connectors/pom.xml
@@ -126,6 +126,7 @@ under the License.
 				<module>flink-sql-connector-kafka</module>
 				<module>flink-sql-connector-hive-1.2.2</module>
 				<module>flink-sql-connector-hive-1.2.2-bd31</module>
+				<module>flink-sql-connector-hive-1.2.2-bd57</module>
 				<module>flink-sql-connector-hive-1.2.2-bd52</module>
 				<module>flink-sql-connector-hive-2.2.0</module>
 				<module>flink-sql-connector-hive-2.3.6</module>
