--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist.yaml
@@ -159,6 +159,10 @@ non-global:
       # kafka latency
         fetch-latency-avg,
         fetch-latency-max,
+        min-fetch-latency-avg,
+        min-fetch-latency-max,
+      # kafka poll interval
+        poll_interval,
       # Network Memory
         TotalMemorySegments,
         AllocatedMemorySegments,
