--- a/flink-core/pom.xml
+++ b/flink-core/pom.xml
@@ -164,6 +164,7 @@ under the License.
 				<configuration>
 					<parameter>
 						<excludes combine.children="append">
+							<exclude>org.apache.flink.api.common.functions.RichFunction</exclude>
 							<exclude>org.apache.flink.api.common.ExecutionConfig#CONFIG_KEY</exclude>
 							<exclude>org.apache.flink.api.common.io.InputFormat#takeNullAsEndOfStream()</exclude>
 							<exclude>org.apache.flink.core.fs.FileSystem\$FSKey</exclude>
