[#4941322] add exit code metrics for TM

--- a/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
+++ b/flink-metrics/flink-metrics-opentsdb/src/main/resources/metrics-whitelist-htap.yaml
@@ -50,6 +50,7 @@ non-global:
         numPendingSlotRequests,
         taskSlotsTotal,
         taskSlotsAvailable,
+        completedContainer,
       # CPU
         Total,
         Cores,
