--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -1003,6 +1003,57 @@ marmt:
   state.backend.local-state.actual-max-size: 60g
   state.backend.fail-exceed-quota-task.enable: false
 
+vitas:
+  dc: va
+  clusterName: vitas
+  high-availability.zookeeper.quorum: 10.121.72.240:2181,10.121.73.127:2181,10.121.73.228:2181,10.121.74.227:2181,10.121.75.105:2181
+  hdfs.prefix: hdfs://harunavaali/flink_maliva
+  checkpoint.hdfs.prefix: hdfs://harunavaali/flink_maliva
+  dashboard.data_source: bytetsd_gva
+  dtop.data_source: dtop_maliva
+  dtop.database: dtop_maliva
+  smart-resources.service-name: data.inf.sr_estimater.service.maliva
+  kafka_server_url: http://kafka-config-va.byted.org
+  yaop_url: http://yaop-us.bytedance.net
+  docker.server: image-manager.byted.org
+  docker.hub: aliyun-va-hub.byted.org
+  docker.region: Aliyun_VA
+  jobmeta.db.name: flink_meta_va
+  grafana.domain_url: "https://grafana-us.byted.org"
+  metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics_va
+  table.exec.hive.permission-check.gemini-server-url: http://gemini-maliva.byted.org/api/query/i18n/verifyUsersPrivilege
+  bytedance.streaming.yarn.check.application.name.unique.region: true
+  yarn.provided.lib.dirs.enabled: false
+  # local state quota limit
+  state.backend.local-state.expected-max-size: 50g
+  state.backend.local-state.actual-max-size: 60g
+  state.backend.fail-exceed-quota-task.enable: false
+
+vivid:
+  dc: va
+  clusterName: vivid
+  high-availability.zookeeper.quorum: 10.121.76.0:2181,10.121.76.101:2181,10.121.76.27:2181,10.121.78.109:2181,10.121.79.47:2181
+  hdfs.prefix: hdfs://harunavaali/flink_maliva
+  checkpoint.hdfs.prefix: hdfs://harunavaali/flink_maliva
+  dashboard.data_source: bytetsd_gva
+  dtop.data_source: dtop_maliva
+  dtop.database: dtop_maliva
+  smart-resources.service-name: data.inf.sr_estimater.service.maliva
+  kafka_server_url: http://kafka-config-va.byted.org
+  yaop_url: http://yaop-us.bytedance.net
+  docker.server: image-manager.byted.org
+  docker.hub: aliyun-va-hub.byted.org
+  docker.region: Aliyun_VA
+  jobmeta.db.name: flink_meta_va
+  grafana.domain_url: "https://grafana-us.byted.org"
+  metrics.reporter.databus_reporter.warehouse.channel: flink_dw_metrics_va
+  table.exec.hive.permission-check.gemini-server-url: http://gemini-maliva.byted.org/api/query/i18n/verifyUsersPrivilege
+  yarn.provided.lib.dirs.enabled: false
+  # local state quota limit
+  state.backend.local-state.expected-max-size: 50g
+  state.backend.local-state.actual-max-size: 60g
+  state.backend.fail-exceed-quota-task.enable: false
+  
 macaw:
   dc: va
   clusterName: macaw
