[#5109378]add k8s client timeout conf

--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -126,6 +126,7 @@ common:
   kubernetes.ingress.enable: true
   kubernetes.podgroup.enable: true
   kubernetes.hostnetwork.enabled: true
+  containerized.master.env.KUBERNETES_REQUEST_TIMEOUT: 30000
 
   pipeline.file-mounted-path: /opt/tiger/workdir
 
